--- a/Cargo.toml
+++ b/Cargo.toml
@@ -4,11 +4,15 @@ version = "0.1.0"
 edition = "2021"
 
 [dependencies]
-axum = "0.7.5"
+axum-extra = { version = "0.9.3", features = ["cookie"] }
+axum = { version = "0.7.5", features = ["query", "form"] }
 clap = { version = "4.5.8", features = ["derive"] }
 log = "0.4.22"
+serde = { version = "1.0.203", features = ["derive"] }
 tokio = { version = "1.38.0", features = ["full"] }
 tower = "0.4.13"
 tower-http = { version = "0.5.2", features = ["full"] }
 tracing = "0.1.40"
 tracing-subscriber = "0.3.18"
+sha2 = "0.10.8"
+uuid = "1.9.1"
