--- a/Cargo.toml
+++ b/Cargo.toml
@@ -15,5 +15,5 @@ tower-http = { version = "0.5.2", features = ["full"] }
 tracing = "0.1.40"
 tracing-subscriber = "0.3.18"
 sha2 = "0.10.8"
-uuid = "1.9.1"
+uuid = { version = "1.9.1", features = ["serde"] }
 bincode = "1.3.3"
