--- a/Cargo.toml
+++ b/Cargo.toml
@@ -4,6 +4,7 @@ version = "0.1.0"
 edition = "2021"
 
 [dependencies]
+chrono = { version = "0.4.38", features = ["serde"] }
 axum-extra = { version = "0.9.3", features = ["cookie"] }
 axum = { version = "0.7.5", features = ["query", "form"] }
 clap = { version = "4.5.8", features = ["derive"] }
@@ -17,3 +18,4 @@ tracing-subscriber = "0.3.18"
 sha2 = "0.10.8"
 uuid = { version = "1.9.1", features = ["serde"] }
 bincode = "1.3.3"
+anyhow = "1.0.86"
