--- a/Cargo.toml
+++ b/Cargo.toml
@@ -20,3 +20,4 @@ uuid = { version = "1.9.1", features = ["serde"] }
 bincode = "1.3.3"
 anyhow = "1.0.86"
 pin-project = "1.1.5"
+itertools = "0.13.0"
